@@ -2,6 +2,18 @@
 
         Reviewed by Simon.
 
+        * Change the coordinate transformation in the PlatformMouseEvent handlers
+        * We want to convert from coordinates of the containing window to our local
+        position on the scrollbar.
+
+        * platform/qt/PlatformScrollBarQt.cpp:
+        (WebCore::PlatformScrollbar::handleMouseMoveEvent):
+        (WebCore::PlatformScrollbar::handleMousePressEvent):
+
+2008-01-18  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
+
+        Reviewed by Simon.
+
         * Make the qDebug more usable. Do not have an additional newline and print
         the untranslated coordinates as well.
 
